--- a/info/TODO.org
+++ b/info/TODO.org
@@ -14,15 +14,16 @@
 #+LATEX_HEADER:
 #+STARTUP: showall
 
-#+title: The TODO file of APDL-Mode
+# #+title: The TODO file of APDL-Mode
      # (defconst superfrobnicator-base (file-name-directory load-file-name))
 
      # (defun superfrobnicator-fetch-image (file)
      #   (expand-file-name file superfrobnicator-base))
-* Version 20.5.0?
+* Version 20.5.0 ?
 
-* TODO Version 20.4.0, updated to 2020R1
+* TODO Version 20.4.0
   DEADLINE: <2020-04-27 Mo>
+  updated to 2020R1
 ** Todos, bugs
 *** State of documentation
      - work on the Info index
@@ -157,21 +158,21 @@
     (tags-query-replace "26\.3" "27.1")
     (tags-search "((emacs \"25.1\"))")
 
-* DONE 20.3.0, Melpa
+* DONE Version 20.3.0
   [2020-03-24 Di]
+  Melpa
   feature freeze [2020-03-20 Fr]
 #  Ansys local help v201 1.7 GB [2020-03-17 Di]
-
-* DONE 20.2.0
+* DONE Version 20.2.0
   [2020-03-10 Tue]
-* DONE 20.1.1
+* DONE Version 20.1.1
    - are the material properties documented, matlib?  Matlib is used
      in -template.el, how about document this directory somewhere?
      Done in matlib/README.org
   - document the APDL Parameter Help Duration in M-?: Done in
     -config.org!
   - bug-report about package.el "NAME-readme.txt", done
-* 162-2:
+* Version 162-2:
 ** Bugs
    - C-c C-s first time visit: User variables file-name-extension:
      Wrong type argument: stringp, nilError during redisplay:
@@ -310,46 +311,46 @@
      - change sequence of alignment.png first not aligned, second aligned
      - Too difficult: slide of extensibility, showing Emacs
        self-documenting help system for a template function
-* Deficiencies:
-  - Highlighting :: Experimental user variable highlighting
-		    does not take into account:
-    + clearing of variables and
-    + usage of variables before their definitions (uninitialised
-      variables)
-    + the variable fontification might clash with Ansys specifiers
-    + string substitution of %variables% in strings does not highlight
-       them in the proper variable face
-  - Highlighting :: A label :LABEL may appear behind the /input
-                    command and is not highlighted as label
-  - Highlighting :: An apostrophy clashes with the Ansys "char"
-                    specifier Keybinding: M-Tab is captured under
-                    Windows and some GNU-Linux desktops Workaround: Press
-                    instead of M-Tab (ALT + TAB) the ESC key and then
-                    the Tab key (ESC, TAB) or apply the command from
-                    the menu bar
-  - Keybinding :: M-j: When there is already a `&' in a format command
-                  (like *msg, *vwrite, *mwrite)
-                  ansys-indent-format-line inserts a redundant one
-  - Keybinding :: C-c C-j jjj not working with Emacs version < Emacs-24
-  - Completion :: Of parametric function parentheses
-		  completes redundant closing parentheses
-  - Completion :: A mouse selection from the *Ansys-completion* buffer
-                  is only inserted upcased.
-  - Completion :: Ansys command 'C***' will not be completed
-  - Skeleton :: Mouse selection of -structural-template does not work
-                (because of stipulated user text input from this skeleton)
-  - Navigation ::  C-c { does not skip an overlay in a number-block
-                  (M-{ does it though))
+** Deficiencies:
+   - Highlighting :: Experimental user variable highlighting
+		     does not take into account:
+     + clearing of variables and
+     + usage of variables before their definitions (uninitialised
+       variables)
+     + the variable fontification might clash with Ansys specifiers
+     + string substitution of %variables% in strings does not highlight
+	them in the proper variable face
+   - Highlighting :: A label :LABEL may appear behind the /input
+                     command and is not highlighted as label
+   - Highlighting :: An apostrophy clashes with the Ansys "char"
+                     specifier Keybinding: M-Tab is captured under
+                     Windows and some GNU-Linux desktops Workaround: Press
+                     instead of M-Tab (ALT + TAB) the ESC key and then
+                     the Tab key (ESC, TAB) or apply the command from
+                     the menu bar
+   - Keybinding :: M-j: When there is already a `&' in a format command
+                   (like *msg, *vwrite, *mwrite)
+                   ansys-indent-format-line inserts a redundant one
+   - Keybinding :: C-c C-j jjj not working with Emacs version < Emacs-24
+   - Completion :: Of parametric function parentheses
+		   completes redundant closing parentheses
+   - Completion :: A mouse selection from the *Ansys-completion* buffer
+                   is only inserted upcased.
+   - Completion :: Ansys command 'C***' will not be completed
+   - Skeleton :: Mouse selection of -structural-template does not work
+                 (because of stipulated user text input from this skeleton)
+   - Navigation ::  C-c { does not skip an overlay in a number-block
+                   (M-{ does it though))
 
-* Procedures
-  - GNU-Linux :: instead of GNU/Linux as FSF suggesting ;-)
-  - Mode Help :: keyboard input is quoted in "", emphasizing in `' and
-                 keys in <>
-  - APDL templates :: minimal working examples ending with -template
-  - Menu :: -> indicates the following sub menu entry ->
-  - M-x compile :: ALL ;-)
+** Procedures
+   - GNU-Linux :: instead of GNU/Linux as FSF suggesting ;-)
+   - Mode Help :: keyboard input is quoted in "", emphasizing in `' and
+                  keys in <>
+   - APDL templates :: minimal working examples ending with -template
+   - Menu :: -> indicates the following sub menu entry ->
+   - M-x compile :: ALL ;-)
 
-   GH-wiki is repo with write access for world, separate from the A-M repo!
+    GH-wiki is repo with write access for world, separate from the A-M repo!
 
 ** Freeze proceedures
   - check whether all undocumented commands
@@ -407,232 +408,232 @@
 
       Dieter
 
-* Ideas for further versions
-** Parameter help and documentation
-   - Enable a mouse button to unhide hidden regions, enable an
-     interactive way to unhide regions, when in the region: Return
-     opens hidden region, ...
-   - dynamic completion and help of parameter options, depending on
-     the contex like the one in bash
-   - makeinfo documentation with org-mode ox exporter
-   - make completion of templates with <mouse 1> button additionally
-     to <mouse 2> as in -complete-symbol.
-   - create a function showing deprecated elements and their
-     replacement.  Inspirations from eldoc-mode, show replacements of
-     deprecated elements?
-   - create a reference card
-   - show list of license products and their license feature names or
-     translate it in the license status from the licensing guide
-     (product variable table)
-   - C-c C-v show (optionally) only variables defined up to current
-     cursor line.  Make the line number display in
-     `ansys-display-variables' (hyper-)links to the corresponding code
-     line in the respective APDL file.  (See `occur' function.)  Or
-     use the imenu mechanism for this and display the variables in the
-     speedbar. Count the number of user variables when displaying them
-   - refcard, etc; Emacs help guidelines
-     GNU programming guideline: More requires?,
-   - display alternatives to/swap deprecated element types
-   - M-? Help: parametric functions are not explained with the help
-     command
-   - M-? Help: if there are ignored characters behind the keyword, the
-     keyword is not found
-   - M-? the command help does not work when there are solver ignored
-     characters behind the unique command name, example: *VWROOOOM.
-   - M-?: following a variable allocation with `='
-   - M-?: In the last empty line displays overlay below command
-     instead above
-   - Provide Ansys command completion and command-help in comint
-     buffer
-   - Include all inquiry functions (see UPF documentation)
-   - Include the _RETURN value of the solid modelling commands into
-     their help strings of parameter help.
-** Ansys process and interpreter buffer
-   example: gnuplot-mode
-   - call to start the Ansys solution results tracker for .nlh (xml
-     see file:file.nlh, contact forces) and convergence .gst (binary?,
-     coded? file:file.gst)
-   - implement something like [[file:nlhist.sh]] for .cnd files (xml see
-     file:file.cnd) or use the new libxml parser ;-)
-   - make display-buffer "*Ansys*" optional when sending commands to
-     the Ansys process
-   - use Ansys *env variables* like AWP_ROOT140 for checking
-     installation directories
-   - check also the license status for hpc licenses if
-     -no-of-processors is greater then 3
-   - implement ANSWAIT variable
-   - autoloading of: -license-file, -license-program functions
-   - dbus support of workbench or integrating emacs in workbench?
-   - insert skeleton with C-c C-s i, send line C-c C-c ccc
-   - warn when C-c C-c tries to send a block command (complete to full
-     block?)
-   - take care when region isn't complete in -send-to-ansys (send whole line)
-   - C-c C-c skips empty lines and comments this is not always desirable
-     -> make this optional -> filter process input?
-   - C-c C-q, C-c C-u and C-c C-c sequences are not shown (and stored)
-     in the comint buffer
-   - make filter of -license-status optional
-   - optimise -start-run with query of y (start immediately),n
-     (exit),e (change params),C-h (help)
-   - Splice any input line behind the BEGIN: symbol in the *Ansys*
-     buffer
-   - Enable one solver run for every Ansys macro buffer
-   - indicate with activation/inactivation of menu items that an
-     asynchronous job is already running or not.
-   - show/mark sent lines in apdl file C-c C-u, C-c C-c,
-     + with fringes
-     + with background
-     + maximum line
-     + reset highlighting, when?
-   - provide Ansys `y' request and carriage return? superflouous?  a
-     single `y' does the trick
-   - Killing a buffer with a running process now asks a confirmation.
-     You can remove this query in two ways: either removing
-     `process-kill-buffer-query-function' from
-     `kill-buffer-query-functions' or setting the appropriate process
-     flag with `set-process-query-on-exit-flag'.
-    - finding an Ansys /filnam command in current macro file and
-      suggesting this as current job-name optionally kill old job when
-      called again with working run warn and optionally remove the
-      ansys lock file before starting a run
-    - search in -job for /filn arguments as default job name like in
-      -display-error-file
-** Skeletons, outline and abbrevs
-   - show a preview buffer with the outline headlines
-   - -skeleton-select is a bit thin, not yet finished?
-   - add a preview mode, with its own keymap for faster editing and
-     copying, like dired
-   - enhance abbrev definitions for *create, *dowhile logics:
-   - use the Ansys sample input listing for template-examples
-   - additional dialog boxes with:
-     /ui,anno,ksel...,wpse,help,query,copy
-   - make outline string in skeletons configurable
-   - spider beams, _bolt.mac, screw.mac, Mohr-Coulomb criterion
-   - rework concept with respect to the Ansys menu structure sort
-     skeletons in menu. Concept: 1.) Ansys Workflow 2.) specialised
-     macro library
-   - Make skeleton-header properly working (info "(autotype)")
-   - Optimise templates: completing-read, read-from-minibuffer
-   - abbrev `d does not indent properly in another block level
-   - Implement choice when completing *IF commands (*ELSEIF or *ENDIF
-     ?THEN?).
-   - Warn when including skeleton in read only file.
-   - skeleton for numbering ansys-skeleton-numbering-controls
-     (skeleton-insert docu)
-   - suggestions with auto-completion of
-     kp,line,area,volu,node,elem,tabn,sval
-   - negation, what negation? TODO:
-   - skeleton for skipping code *if,then *else*endif if selection:
-     wrap around and indenting *go/*if label is not fontified at the
-     command line (restriction of 7 characters with out the colon.)
-     must *go:label be unambiguous?
-** Miscellaneous
-   - hash or signature file for packages
-   - show content of matlib/ folder
-   - add to -display-variables a prefix argument for showing the value
-     of the variable around point, or center the variables window...
-   - customisation option for a the web browser of -browse-ansys-help
-   - ideas for preview also of a/the macro directory?
-   - put graphics dlls in windows package
-   - LSDYN support, see lsdyna.el
-   - embedded calc :: include in hacking.mac
-   - Alignment :: alignment "section" is not clearly defined in function
-		  -align
-   - alignment :: extend to vector definitions
-		  t(1,0) = 20,300,3094,
-		  t(1,1) =  3,  4,   9,
-   - Utility for clearing files like .rst, ... or using dired, clear_files.sh?
-     with listing listing of file types
-   - Configure the highlighting colours with black on white background
-   - C-j, M-j are not skipping to `,' whith default command (from second
-     line onwards)!
-   - supply command for clearing recursively not important process files:
-     .rst, .log, ..., supply a customisaton variable
-   - narrow, outline, transparent-font: eblocks, nblocks by default?
-   - add notes for parameter help of undocumented commands (alist)
-   - create filter variable for hiding not installed license types
-     ("aiiges" "aihexa") or better regexp filter "ai.*\\|acf.*"
-   - commands shorter than 4 chars are not allowed with additional chars
-     adjust this to -highlighting-level 0
-   - Make Ansys-Mode also working solely with ansys-mode.el??
-   - make M-C-h more intelligent like M-h (if mark...)
-   - speed concern: replace -find-duplicate-p with function argument to
-     add-to-list
-   - For non-comint-mode usage: display .log file with tail mode
-   - is outline-mode enabled? no! make default?, outline
-   - take care of setup procedure: v110/ansys/apdl/start110.ans
-     /MPLIB,READ,/ansys_inc/v110/ansys/matlib
-   - removing/renaming/checking abort file?
-   - Are characters behind unique commands shorter than 4 characters
-     possible? No /sol(u) sufficient? Yes condensed input line ($)
-     behind commands without arguments possible? Yes have a look in
-     -variable-defining-commands!  Warn when - unintentionally -
-     arguments are used for Ansys commands which do not allow
-     arguments.  Or implement some auto-newline feature?  But
-     problematic in condensed command lines or when applying code
-     comments!
-   - undocumented ask parameter
-   - mode-line-format nil);no mode line for this buffer Unambiguous
-   - Emacs: old-style backquotes?  used in the old template macro system
-   - completion of function names: cursor should end within parentheses
-   - better hints for auto-insertion features
-   - up/down-block when we are over a begin-keyword and in a block-end
-     line
-   - component names are fontified as variables! separate them cmlist?
-   - format string for *VWRITE: line(s) below, in parens, when FORTRAN
-     format specifiers are used, keyword SEQU povides row numbers, up
-     to 19 parameters are allowed
-   - remove vestiges of ansys-mod.el for making ansys-mode.el GPL
-     proof.  Check whether octave-mod.el really is GPL compliant, use
-     -ctave-mod.el from 1997, kill octave-mod.el afterwards in
-     makefile read every symbol docu string ->NEW_C or _C or OCTAVE_C
-   - replace/extend column-ruler with ruler-mode or ruler implemented as
-     overlay in buffer
-   - make everything completely customisable, eg auto-insert stuff
-     customisable enable, Emacs customisation of auto-insert-query
-   - Fontify *completion list* distinguishing elements: commands,
-     functions and keywords.
-   - provide a list of options for the -license function, set this
-     function in the defcustom lmstat -a etc.
-   - auto-indent-switch as defcustom?
-   - inhibit the unnecessary blink-matching-block display when closing a
-     block behind a block-end keyword
-   - highlight matching block keywords (similar to show-paren-mode) when
-     point is at keyword
-   - Implement highlighting of bracket pairs with the correct level in
-     Ansys GET- and parametric- functions.
-   - highlighting of plot commands inside the /GCMD command
-   - DEFSUBSTs with DEFUNs inside aren't particularly helpful?
-   - Emphasise better implied (colon) loops n,(1:6),(2:12:2) => n,1,2
-     $ n,2,4 $... (little used, I know, but any ideas going beyond the
-     colon?).
-   - startup screen for Ansys mode: Mode help, Ansys version,
-     supressing the startup screen 'ansys-mode-startup-message maybe
-     as advice when sluggish -> compiliation
-   - Enable choice for /show,3d or x11 (-start-graphics)
-   - Provide a way to send commands to the tcl-tk Ansys gui (x11
-     programming).
-** Ansys syntax restrictions not (yet) accounted for
-   - Parentheses can only be nested 4 levels deep and only up to 9
-     operations (+,-,*,...) within these set of parentheses
-   - PATH name is restricted to 8 chars
-   - *SET parameter strings may only be 32 character long!
-   - Character parameters are restricted to only 8 characters.
-   - *MSG command can only have 9 additional continuation lines
-   - Code line restriction of 640 characters
-   - Block level restriction of 20 levels of nested *DO loops (except
-     with /INPUT and *USE)
-   - Block level restriction of 10 levels of nested *IF blocks
-   - Macro level restriction: 20 macros
-** Unknown Ansys stuff
-   - what the heck is the *UILIST command?
-   - Is hyper56 a valid element?
+** Ideas for further versions
+*** Parameter help and documentation
+    - Enable a mouse button to unhide hidden regions, enable an
+      interactive way to unhide regions, when in the region: Return
+      opens hidden region, ...
+    - dynamic completion and help of parameter options, depending on
+      the contex like the one in bash
+    - makeinfo documentation with org-mode ox exporter
+    - make completion of templates with <mouse 1> button additionally
+      to <mouse 2> as in -complete-symbol.
+    - create a function showing deprecated elements and their
+      replacement.  Inspirations from eldoc-mode, show replacements of
+      deprecated elements?
+    - create a reference card
+    - show list of license products and their license feature names or
+      translate it in the license status from the licensing guide
+      (product variable table)
+    - C-c C-v show (optionally) only variables defined up to current
+      cursor line.  Make the line number display in
+      `ansys-display-variables' (hyper-)links to the corresponding code
+      line in the respective APDL file.  (See `occur' function.)  Or
+      use the imenu mechanism for this and display the variables in the
+      speedbar. Count the number of user variables when displaying them
+    - refcard, etc; Emacs help guidelines
+      GNU programming guideline: More requires?,
+    - display alternatives to/swap deprecated element types
+    - M-? Help: parametric functions are not explained with the help
+      command
+    - M-? Help: if there are ignored characters behind the keyword, the
+      keyword is not found
+    - M-? the command help does not work when there are solver ignored
+      characters behind the unique command name, example: *VWROOOOM.
+    - M-?: following a variable allocation with `='
+    - M-?: In the last empty line displays overlay below command
+      instead above
+    - Provide Ansys command completion and command-help in comint
+      buffer
+    - Include all inquiry functions (see UPF documentation)
+    - Include the _RETURN value of the solid modelling commands into
+      their help strings of parameter help.
+*** Ansys process and interpreter buffer
+    example: gnuplot-mode
+    - call to start the Ansys solution results tracker for .nlh (xml
+      see file:file.nlh, contact forces) and convergence .gst (binary?,
+      coded? file:file.gst)
+    - implement something like [[file:nlhist.sh]] for .cnd files (xml see
+      file:file.cnd) or use the new libxml parser ;-)
+    - make display-buffer "*Ansys*" optional when sending commands to
+      the Ansys process
+    - use Ansys *env variables* like AWP_ROOT140 for checking
+      installation directories
+    - check also the license status for hpc licenses if
+      -no-of-processors is greater then 3
+    - implement ANSWAIT variable
+    - autoloading of: -license-file, -license-program functions
+    - dbus support of workbench or integrating emacs in workbench?
+    - insert skeleton with C-c C-s i, send line C-c C-c ccc
+    - warn when C-c C-c tries to send a block command (complete to full
+      block?)
+    - take care when region isn't complete in -send-to-ansys (send whole line)
+    - C-c C-c skips empty lines and comments this is not always desirable
+      -> make this optional -> filter process input?
+    - C-c C-q, C-c C-u and C-c C-c sequences are not shown (and stored)
+      in the comint buffer
+    - make filter of -license-status optional
+    - optimise -start-run with query of y (start immediately),n
+      (exit),e (change params),C-h (help)
+    - Splice any input line behind the BEGIN: symbol in the *Ansys*
+      buffer
+    - Enable one solver run for every Ansys macro buffer
+    - indicate with activation/inactivation of menu items that an
+      asynchronous job is already running or not.
+    - show/mark sent lines in apdl file C-c C-u, C-c C-c,
+      + with fringes
+      + with background
+      + maximum line
+      + reset highlighting, when?
+    - provide Ansys `y' request and carriage return? superflouous?  a
+      single `y' does the trick
+    - Killing a buffer with a running process now asks a confirmation.
+      You can remove this query in two ways: either removing
+      `process-kill-buffer-query-function' from
+      `kill-buffer-query-functions' or setting the appropriate process
+      flag with `set-process-query-on-exit-flag'.
+     - finding an Ansys /filnam command in current macro file and
+       suggesting this as current job-name optionally kill old job when
+       called again with working run warn and optionally remove the
+       ansys lock file before starting a run
+     - search in -job for /filn arguments as default job name like in
+       -display-error-file
+*** Skeletons, outline and abbrevs
+    - show a preview buffer with the outline headlines
+    - -skeleton-select is a bit thin, not yet finished?
+    - add a preview mode, with its own keymap for faster editing and
+      copying, like dired
+    - enhance abbrev definitions for *create, *dowhile logics:
+    - use the Ansys sample input listing for template-examples
+    - additional dialog boxes with:
+      /ui,anno,ksel...,wpse,help,query,copy
+    - make outline string in skeletons configurable
+    - spider beams, _bolt.mac, screw.mac, Mohr-Coulomb criterion
+    - rework concept with respect to the Ansys menu structure sort
+      skeletons in menu. Concept: 1.) Ansys Workflow 2.) specialised
+      macro library
+    - Make skeleton-header properly working (info "(autotype)")
+    - Optimise templates: completing-read, read-from-minibuffer
+    - abbrev `d does not indent properly in another block level
+    - Implement choice when completing *IF commands (*ELSEIF or *ENDIF
+      ?THEN?).
+    - Warn when including skeleton in read only file.
+    - skeleton for numbering ansys-skeleton-numbering-controls
+      (skeleton-insert docu)
+    - suggestions with auto-completion of
+      kp,line,area,volu,node,elem,tabn,sval
+    - negation, what negation? TODO:
+    - skeleton for skipping code *if,then *else*endif if selection:
+      wrap around and indenting *go/*if label is not fontified at the
+      command line (restriction of 7 characters with out the colon.)
+      must *go:label be unambiguous?
+*** Miscellaneous
+    - hash or signature file for packages
+    - show content of matlib/ folder
+    - add to -display-variables a prefix argument for showing the value
+      of the variable around point, or center the variables window...
+    - customisation option for a the web browser of -browse-ansys-help
+    - ideas for preview also of a/the macro directory?
+    - put graphics dlls in windows package
+    - LSDYN support, see lsdyna.el
+    - embedded calc :: include in hacking.mac
+    - Alignment :: alignment "section" is not clearly defined in function
+		   -align
+    - alignment :: extend to vector definitions
+		   t(1,0) = 20,300,3094,
+		   t(1,1) =  3,  4,   9,
+    - Utility for clearing files like .rst, ... or using dired, clear_files.sh?
+      with listing listing of file types
+    - Configure the highlighting colours with black on white background
+    - C-j, M-j are not skipping to `,' whith default command (from second
+      line onwards)!
+    - supply command for clearing recursively not important process files:
+      .rst, .log, ..., supply a customisaton variable
+    - narrow, outline, transparent-font: eblocks, nblocks by default?
+    - add notes for parameter help of undocumented commands (alist)
+    - create filter variable for hiding not installed license types
+      ("aiiges" "aihexa") or better regexp filter "ai.*\\|acf.*"
+    - commands shorter than 4 chars are not allowed with additional chars
+      adjust this to -highlighting-level 0
+    - Make Ansys-Mode also working solely with ansys-mode.el??
+    - make M-C-h more intelligent like M-h (if mark...)
+    - speed concern: replace -find-duplicate-p with function argument to
+      add-to-list
+    - For non-comint-mode usage: display .log file with tail mode
+    - is outline-mode enabled? no! make default?, outline
+    - take care of setup procedure: v110/ansys/apdl/start110.ans
+      /MPLIB,READ,/ansys_inc/v110/ansys/matlib
+    - removing/renaming/checking abort file?
+    - Are characters behind unique commands shorter than 4 characters
+      possible? No /sol(u) sufficient? Yes condensed input line ($)
+      behind commands without arguments possible? Yes have a look in
+      -variable-defining-commands!  Warn when - unintentionally -
+      arguments are used for Ansys commands which do not allow
+      arguments.  Or implement some auto-newline feature?  But
+      problematic in condensed command lines or when applying code
+      comments!
+    - undocumented ask parameter
+    - mode-line-format nil);no mode line for this buffer Unambiguous
+    - Emacs: old-style backquotes?  used in the old template macro system
+    - completion of function names: cursor should end within parentheses
+    - better hints for auto-insertion features
+    - up/down-block when we are over a begin-keyword and in a block-end
+      line
+    - component names are fontified as variables! separate them cmlist?
+    - format string for *VWRITE: line(s) below, in parens, when FORTRAN
+      format specifiers are used, keyword SEQU povides row numbers, up
+      to 19 parameters are allowed
+    - remove vestiges of ansys-mod.el for making ansys-mode.el GPL
+      proof.  Check whether octave-mod.el really is GPL compliant, use
+      -ctave-mod.el from 1997, kill octave-mod.el afterwards in
+      makefile read every symbol docu string ->NEW_C or _C or OCTAVE_C
+    - replace/extend column-ruler with ruler-mode or ruler implemented as
+      overlay in buffer
+    - make everything completely customisable, eg auto-insert stuff
+      customisable enable, Emacs customisation of auto-insert-query
+    - Fontify *completion list* distinguishing elements: commands,
+      functions and keywords.
+    - provide a list of options for the -license function, set this
+      function in the defcustom lmstat -a etc.
+    - auto-indent-switch as defcustom?
+    - inhibit the unnecessary blink-matching-block display when closing a
+      block behind a block-end keyword
+    - highlight matching block keywords (similar to show-paren-mode) when
+      point is at keyword
+    - Implement highlighting of bracket pairs with the correct level in
+      Ansys GET- and parametric- functions.
+    - highlighting of plot commands inside the /GCMD command
+    - DEFSUBSTs with DEFUNs inside aren't particularly helpful?
+    - Emphasise better implied (colon) loops n,(1:6),(2:12:2) => n,1,2
+      $ n,2,4 $... (little used, I know, but any ideas going beyond the
+      colon?).
+    - startup screen for Ansys mode: Mode help, Ansys version,
+      supressing the startup screen 'ansys-mode-startup-message maybe
+      as advice when sluggish -> compiliation
+    - Enable choice for /show,3d or x11 (-start-graphics)
+    - Provide a way to send commands to the tcl-tk Ansys gui (x11
+      programming).
+*** Ansys syntax restrictions not (yet) accounted for
+    - Parentheses can only be nested 4 levels deep and only up to 9
+      operations (+,-,*,...) within these set of parentheses
+    - PATH name is restricted to 8 chars
+    - *SET parameter strings may only be 32 character long!
+    - Character parameters are restricted to only 8 characters.
+    - *MSG command can only have 9 additional continuation lines
+    - Code line restriction of 640 characters
+    - Block level restriction of 20 levels of nested *DO loops (except
+      with /INPUT and *USE)
+    - Block level restriction of 10 levels of nested *IF blocks
+    - Macro level restriction: 20 macros
+*** Unknown Ansys stuff
+    - what the heck is the *UILIST command?
+    - Is hyper56 a valid element?
 -----
-# The following is for Emacs
-# local variables:
-# word-wrap: t
-# show-trailing-whitespace: t
-# indicate-empty-lines: t
-# time-stamp-active: t
-# time-stamp-format: "%:y-%02m-%02d"
-# end:
+ # The following is for Emacs
+ # local variables:
+ # word-wrap: t
+ # show-trailing-whitespace: t
+ # indicate-empty-lines: t
+ # time-stamp-active: t
+ # time-stamp-format: "%:y-%02m-%02d"
+ # end:
